Use ubuntu-20.04 image on github actions pipeline .yml files to remove warning

--- a/.github/workflows/deploy_to_production.yml
+++ b/.github/workflows/deploy_to_production.yml
@@ -15,7 +15,7 @@ jobs:
     # Do deploy
     # Log deploy
     # Merge with master
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
       with:
