--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -170,3 +170,27 @@ pipelines:
               --rm
               --volume ${PWD}/Merkelypipe.bitbucket.json:/data/Merkelypipe.json
               merkely/change
+
+
+    - step:
+        name: Deploy to staging and log deployment in Merkely
+        services:
+          - docker
+        caches:
+          - docker
+        script:
+          # Deploy to staging
+          - echo YOUR DEPLOYMENT COMMAND HERE
+          # Log deployment to staging in Merkely
+          - docker run
+              --env MERKELY_COMMAND=log_deployment
+              --env MERKELY_FINGERPRINT=sha256://${SHA256}/${TAGGED_IMAGE}
+              --env MERKELY_DESCRIPTION="Deployed to staging in pipeline"
+              --env MERKELY_ENVIRONMENT=staging
+              --env MERKELY_API_TOKEN=${MERKELY_API_TOKEN}
+              --env BITBUCKET_WORKSPACE
+              --env BITBUCKET_REPO_SLUG
+              --env BITBUCKET_BUILD_NUMBER
+              --rm
+              --volume ${PWD}/Merkelypipe.bitbucket.json:/data/Merkelypipe.json
+              merkely/change
