--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,13 +3,15 @@ image: atlassian/default-image:2
 
 
 definitions:
-  steps:
-    - step: &export_image_env_vars
-        name: Make Docker image names available for following steps
-        script:
-          - export LATEST_IMAGE=${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-latest
-          - export TAGGED_IMAGE=${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-$(git log -1 --pretty=%h)
+  export_image_env_vars: &export_image_env_vars |
+    export LATEST_IMAGE=${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-latest
+    export TAGGED_IMAGE=${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-$(git log -1 --pretty=%h)
 
+  export_image_sha256_env_var: &export_image_sha256_env_var |
+    docker pull ${TAGGED_IMAGE}
+    export SHA256=$(docker inspect --format='{{index .RepoDigests 0}}' ${TAGGED_IMAGE} | cut -d ':' -f 2)
+
+  steps:
 
     - step: &merkely_setup_image_env_vars
         name: Make Docker image names available for following steps
@@ -38,7 +40,8 @@ definitions:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - export $(cat ENV_VARS.txt | xargs)
+          - *export_image_env_vars
+          - *export_image_sha256_env_var
           - docker run
             --env MERKELY_COMMAND=log_artifact
             --env MERKELY_FINGERPRINT=sha256://${SHA256}/${TAGGED_IMAGE}
@@ -72,7 +75,8 @@ definitions:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - export $(cat ENV_VARS.txt | xargs)
+          - *export_image_env_vars
+          - *export_image_sha256_env_var
           - docker run
               --env MERKELY_COMMAND=log_deployment
               --env MERKELY_FINGERPRINT=sha256://${SHA256}/${TAGGED_IMAGE}
@@ -98,7 +102,8 @@ pipelines:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - export $(cat ENV_VARS.txt | xargs)
+          - *export_image_env_vars
+          - *export_image_sha256_env_var
           - docker build --file ${PWD}/Dockerfile --tag ${TAGGED_IMAGE} ${PWD}
           - docker tag ${TAGGED_IMAGE} ${LATEST_IMAGE}
           - echo ${DOCKERHUB_DEPLOY_TOKEN} | docker login --username ${DOCKERHUB_DEPLOY_USERNAME} --password-stdin
@@ -114,7 +119,8 @@ pipelines:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - export $(cat ENV_VARS.txt | xargs)
+          - *export_image_env_vars
+          - *export_image_sha256_env_var
           # Run the units tests, write results to build/test/pytest_unit.xml
           - docker run
             --name container
@@ -145,7 +151,8 @@ pipelines:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - export $(cat ENV_VARS.txt | xargs)
+          - *export_image_env_vars
+          - *export_image_sha256_env_var
           # Run bandit security, write results directly to build/security/security.xml
           - mkdir -p build/security
           - docker run
@@ -174,7 +181,8 @@ pipelines:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - export $(cat ENV_VARS.txt | xargs)
+          - *export_image_env_vars
+          - *export_image_sha256_env_var
           # Run coverage, write summary to build/coverage/coverage_summary.sh
           - mkdir -p build/coverage
           - docker run
