--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,7 +3,7 @@ image: atlassian/default-image:2
 
 
 definitions:
-  export_image_env_vars: &export_image_env_vars |
+  export_image_name_env_vars: &export_image_name_env_vars |
     export LATEST_IMAGE=${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-latest
     export TAGGED_IMAGE=${DOCKERHUB_REPO_OWNER}/loancalculator:bitbucket-$(git log -1 --pretty=%h)
 
@@ -31,7 +31,7 @@ definitions:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - *export_image_env_vars
+          - *export_image_name_env_vars
           - *export_image_sha256_env_var
           - docker run
             --env MERKELY_COMMAND=log_artifact
@@ -52,7 +52,7 @@ definitions:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - *export_image_env_vars
+          - *export_image_name_env_vars
           - *export_image_sha256_env_var
           - docker run
               --env MERKELY_COMMAND=log_deployment
@@ -70,14 +70,13 @@ definitions:
 
 pipelines:
   default:
-    - step: *export_image_env_vars
     - step: *merkely_declare_pipeline
     - step:
         name: Build and publish Docker image
         services: [ docker ]
         caches: [ docker ]
         script:
-          - *export_image_env_vars
+          - *export_image_name_env_vars
           - *export_image_sha256_env_var
           - docker build --file ${PWD}/Dockerfile --tag ${TAGGED_IMAGE} ${PWD}
           - docker tag ${TAGGED_IMAGE} ${LATEST_IMAGE}
@@ -91,7 +90,7 @@ pipelines:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - *export_image_env_vars
+          - *export_image_name_env_vars
           - *export_image_sha256_env_var
           # Run the units tests, write results to build/test/pytest_unit.xml
           - docker run
@@ -121,7 +120,7 @@ pipelines:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - *export_image_env_vars
+          - *export_image_name_env_vars
           - *export_image_sha256_env_var
           # Run bandit security, write results directly to build/security/security.xml
           - mkdir -p build/security
@@ -150,7 +149,7 @@ pipelines:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - *export_image_env_vars
+          - *export_image_name_env_vars
           - *export_image_sha256_env_var
           # Run coverage, write summary to build/coverage/coverage_summary.sh
           - mkdir -p build/coverage
