--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -60,6 +60,46 @@ definitions:
             merkely/change
 
 
+    - step: &run_unit_tests
+        name: Run Units Tests, Write Results to build/test/pytest_unit.xml
+        services: [ docker ]
+        caches: [ docker ]
+        script:
+          - *export_image_name_env_vars
+          - *export_image_sha256_env_var
+          - docker run
+            --name container
+            --entrypoint ./entrypoint-unit_test.sh
+            ${TAGGED_IMAGE}
+          - mkdir -p build/test
+          - docker cp container:/code/build/test/ ${PWD}/build
+          - docker rm container
+        artifacts:
+          - build/test/pytest_unit.xml
+
+
+    - step: &merkely_log_unit_tests_results
+        name: Log Unit Tests Results to Merkely
+        services: [ docker ]
+        caches: [ docker ]
+        script:
+          - *export_image_name_env_vars
+          - *export_image_sha256_env_var
+          - TEST_RESULTS_FILE=build/test/pytest_unit.xml
+          - docker run
+              --env MERKELY_COMMAND=log_test
+              --env MERKELY_FINGERPRINT=sha256://${SHA256}/${TAGGED_IMAGE}
+              --env MERKELY_EVIDENCE_TYPE=unit_test
+              --env MERKELY_API_TOKEN=${MERKELY_API_TOKEN}
+              --env BITBUCKET_WORKSPACE
+              --env BITBUCKET_REPO_SLUG
+              --env BITBUCKET_BUILD_NUMBER
+              --rm
+              --volume ${PWD}/${TEST_RESULTS_FILE}:/data/junit/junit.xml
+              --volume ${PWD}/Merkelypipe.bitbucket.json:/data/Merkelypipe.json
+              merkely/change
+
+
     - step: &merkely_log_deployment
         name: Log deployment in Merkely
         services: [ docker ]
@@ -86,36 +126,8 @@ pipelines:
     - step: *merkely_declare_pipeline
     - step: *build_and_publish_docker_image
     - step: *merkely_log_docker_image
-    - step:
-        name: Run unit tests and log results in Merkely
-        services: [ docker ]
-        caches: [ docker ]
-        script:
-          - *export_image_name_env_vars
-          - *export_image_sha256_env_var
-          # Run the units tests, write results to build/test/pytest_unit.xml
-          - docker run
-            --name container
-            --entrypoint ./entrypoint-unit_test.sh
-            ${TAGGED_IMAGE}
-          - mkdir -p build/test
-          - docker cp container:/code/build/test/ ${PWD}/build
-          - docker rm container
-          # Log test results in Merkely
-          - TEST_RESULTS_FILE=build/test/pytest_unit.xml
-          - docker run
-              --env MERKELY_COMMAND=log_test
-              --env MERKELY_FINGERPRINT=sha256://${SHA256}/${TAGGED_IMAGE}
-              --env MERKELY_EVIDENCE_TYPE=unit_test
-              --env MERKELY_API_TOKEN=${MERKELY_API_TOKEN}
-              --env BITBUCKET_WORKSPACE
-              --env BITBUCKET_REPO_SLUG
-              --env BITBUCKET_BUILD_NUMBER
-              --rm
-              --volume ${PWD}/${TEST_RESULTS_FILE}:/data/junit/junit.xml
-              --volume ${PWD}/Merkelypipe.bitbucket.json:/data/Merkelypipe.json
-              merkely/change
-
+    - step: *run_unit_tests
+    - step: *merkely_log_unit_tests_results
     - step:
         name: Run security analysis and log results in Merkely
         services: [ docker ]
