--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -164,14 +164,14 @@ definitions:
           - source build/coverage/coverage_summary.sh
           - pipe: docker://merkely/change:latest
             variables:
-              MERKELY_COMMAND: log_evidence
-              MERKELY_OWNER: compliancedb
+              MERKELY_COMMAND: "log_evidence"
+              MERKELY_OWNER: "compliancedb"
               MERKELY_PIPELINE: "bitbucket-loancalculator"
               MERKELY_FINGERPRINT: "sha256://${SHA256}/${TAGGED_IMAGE}"
-              MERKELY_EVIDENCE_TYPE: coverage
-              MERKELY_IS_COMPLIANT: 'TRUE'
+              MERKELY_EVIDENCE_TYPE: "coverage"
+              MERKELY_IS_COMPLIANT: "TRUE"
               MERKELY_DESCRIPTION: "${COVERAGE_SUMMARY}"
-              MERKELY_API_TOKEN: ${MERKELY_API_TOKEN}
+              MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
 
     - step: &deploy_to_staging
